--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "mysql2": "^3.1.0",
     "reflect-metadata": "^0.1.13",
